fix the navbar hamburger issue on mobile

--- a/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/app.less
+++ b/src/ClassCentral/SiteBundle/Resources/public/slashpixel/less/app.less
@@ -8691,6 +8691,7 @@ footer ul > li > a {
   background-color: @gray-dark;
   padding: 65px 25px;
   margin: 50px 0;
+  overflow: hidden;
 }
 
 .full-width-bg-row:before,
@@ -8774,6 +8775,7 @@ footer ul > li > a {
 }
 
 
+
 // header area
 
 .headerArea {
@@ -8782,6 +8784,7 @@ footer ul > li > a {
   padding-top: 80px;
   background: url("/bundles/classcentralsite/slashpixel/images/introbg.jpg") center top no-repeat;
   background-size: cover;
+  overflow: hidden;
 }
 
 .headerArea_tilt {
